Set img-upload-preview canvas size to 187px by 187 px to avoid overflow.

--- a/cakelove/Content/Site.css
+++ b/cakelove/Content/Site.css
@@ -72,3 +72,9 @@ ul#class-info-btn-group > li {
     margin:5px;
 
 }
+
+div#img-upload-preview canvas
+{    
+    width:187px;
+    height:187px;
+}
